<resources>
    <!-- Generated by Automatic String Resource Translation -->
    <!--          https://asrt.gluege.boerde.de             -->
    <string name="app_name">RANDOM CHAT ADMIN</string>
    <string name="id_1">You have not entered any data yet</string>
    <string name="id_2">The change was saved successfully!</string>
    <string name="id_6">Blocked successfully!</string>
    <string name="id_7">Please wait ❤</string>
    <string name="id_8">Who we are</string>
    <string name="id_9">Privacy Policy</string>

    <string name="id_13">user</string>
    <string name="id_14">" seconds ago"</string>
    <string name="id_15">" minutes ago"</string>
    <string name="id_16">" hours ago"</string>
    <string name="id_17">" days ago"</string>
    <string name="id_18">Online</string>
    <string name="id_19">"Online."</string>
    <string name="id_20">the total number of interactions</string>
    <string name="id_21">Interactions</string>
    <string name="id_22">Random</string>
    <string name="id_23">I like it</string>
    <string name="id_24">loved it</string>
    <string name="id_25">the total number of Messages</string>
    <string name="id_26">Messages</string>
    <string name="id_28">the total number of devices</string>
    <string name="id_29">devices</string>
    <string name="id_30">the total number of users</string>
    <string name="id_31">Users</string>
    <string name="id_32">Man</string>
    <string name="id_33">Female</string>
    <string name="id_34">Boy</string>
    <string name="id_35">Girl</string>
    <string name="id_36">Voice</string>
    <string name="id_37">Voice message</string>
    <string name="id_38">Picture</string>
    <string name="id_39">Call</string>
    <string name="id_40">Voice call</string>
    <string name="id_41">Video call</string>
    <string name="id_42">Text</string>
    <string name="id_43">Text message</string>
    <string name="id_44">Others</string>

    <string name="id_46">The change was saved successfully!</string>
    <string name="id_47">Un-suspend!</string>
    <string name="id_48">Suspend</string>

    <string name="id_52">There is an error in the email or password</string>
    <string name="id_53">Admin panel</string>
    <string name="id_54">Email</string>
    <string name="id_55">Password</string>
    <string name="id_56">Sign in</string>
    <string name="id_58">Total number of users</string>
    <string name="id_59">Currently active users</string>
    <string name="id_60">Inactive users</string>
    <string name="id_61">Interactions</string>
    <string name="id_62">Click to view statistics</string>
    <string name="id_63">Devices</string>
    <string name="id_65">Gender</string>
    <string name="id_67">Messages</string>
    <string name="id_69">Who are we?</string>
    <string name="id_70">edit</string>
    <string name="id_71">Privacy Policy</string>
    <string name="id_72">edit</string>
    <string name="id_74">( Panning - Modification - notify )</string>
    <string name="id_75">geographical areas</string>
    <string name="id_76">(add - delete)</string>
    <string name="id_77">Reports Management</string>
    <string name="id_78">( review user reports )</string>
    <string name="id_79">Send a notification</string>
    <string name="id_80">( send a notification to all users )</string>
    <string name="id_81">Enter the support mail here</string>
    <string name="id_83">Save edits</string>
    <string name="id_84">My Tools</string>

    <string name="id_86">Devices</string>
    <string name="id_88">Messages</string>
    <string name="id_90">Communications</string>
    <string name="id_91">Send a notification</string>
    <string name="id_100">More Details</string>
    <string name="id_102">the current data</string>
    <string name="id_103">adjustable number of jewels</string>
    <string name="id_104">confirmation</string>
    <string name="id_105">Cancel</string>
    <string name="id_106">Enter the number of jewels</string>
    <string name="id_107">Who we are</string>
    <string name="id_108">Save edits</string>
    <string name="id_109">ignore</string>
    <string name="id_110">Title</string>
    <string name="id_111">Notification content here</string>
    <string name="id_112">Sending</string>
    <string name="id_113">Undo</string>
    <string name="id_114">Block</string>
    <string name="id_115">Abusive behavior</string>
    <string name="id_116">Abusive language</string>
    <string name="id_117">Username</string>
    <string name="id_118">Username / </string>
    <string name="id_119">Short Description ^^</string>
    <string name="id_120">Add jewels</string>
    <string name="id_121">Block</string>
    <string name="id_123">"  Match plus"</string>
    <string name="id_124">"  VIP"</string>


    <string name="id_125">Statistics</string>
    <string name="id_126">Location</string>
    <string name="id_127">Kyle Reactions</string>
    <string name="id_128">Country</string>
    <string name="id_129">report</string>
    <string name="id_130">There no any data yet</string>
    <string name="id_131">Terms and Conditions</string>
    <string name="id_132">Remember me</string>
    <string name="id_133">Send me a notification when one of the users searches for a random person, this feature will help you if the application is new and there are not many users there</string>
</resources>