<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arb_1"
            android:gravity="center"
            android:text="@string/id_53"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <ImageView
            android:layout_gravity="left|center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="27dp"
            android:tint="@color/white"
            android:layout_height="27dp"
            android:gravity="center"
            android:src="@drawable/support" />
    </FrameLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:gravity="center"
        android:src="@drawable/administrator" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arb_1"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/id_54"
        android:textColorHint="#818181"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arb_1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/id_55"
        android:inputType="textPassword"
        android:textColorHint="#818181"
        android:textSize="14sp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:text="@string/id_132"

        android:id="@+id/RememberMe"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:onClick="login">

        <mehdi.sakout.fancybuttons.FancyButton xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_radius="5dp"
            fancy:fb_text=""
            fancy:fb_textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/arb_1"
            android:gravity="center"
            android:text="@string/id_56"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </FrameLayout>
</LinearLayout>


</LinearLayout>