<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="265dp">



    <ImageView
        android:src="@drawable/send_2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="bottom|center"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:civ_border_width="1dp"
            android:layout_margin="10dp"
            app:civ_border_color="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/bell"/>


    </FrameLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/title"
            android:layout_width="30dp"
            android:tint="@color/colorPrimary"
            android:layout_height="30dp"/>
        <EditText
            android:layout_gravity="start"
            android:hint="@string/id_110"
            android:id="@+id/title"
            android:textSize="17sp"

            android:singleLine="true"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/arb_1"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:hint="@string/id_111"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/arb_1"
        android:id="@+id/content"
        android:imeOptions="actionDone"

        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="34dp"

            >


            <mehdi.sakout.fancybuttons.FancyButton
                xmlns:fancy="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorPrimary"
                fancy:fb_focusColor="@color/colorPrimaryDark"
                fancy:fb_radius="5dp"
                fancy:fb_text=""
                fancy:fb_textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/arb_1"
                android:gravity="center"
                android:textSize="12sp"
                android:id="@+id/send"
                android:textColor="@color/white"
                android:text="@string/id_112" />

        </FrameLayout>
        <FrameLayout
          android:layout_margin="10dp"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:id="@+id/cancel"

            >



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/arb_1"
                android:gravity="center"
                android:textSize="12sp"

                android:textColor="@color/colorPrimary"
                android:text="@string/id_113" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
