<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="edit_about_us"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/edit"
            android:tint="@color/colorPrimary"
            android:layout_width="27dp"
            android:layout_height="27dp"/>
        <TextView
            android:layout_gravity="start"
            android:text="@string/id_107"
            android:id="@+id/title"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/arb_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:hint="...."
        android:layout_gravity="start"
        android:id="@+id/enter"
        android:gravity="start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:background="@drawable/edit_text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:fontFamily="@font/arb_1"
        android:textColorHint="#818181"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="#BABABA"
        android:visibility="gone"
        android:layout_height="1dp"/>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="1"
            android:id="@+id/ok"
            android:textColor="@color/colorPrimary"
            android:text="@string/id_108"
            android:fontFamily="@font/arb_1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="1dp"
            android:background="#BABABA"
            android:visibility="gone"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:textColor="#979797"
            android:text="@string/id_109"
            android:fontFamily="@font/arb_1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
