<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf0f3"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arb_1"
            android:gravity="center"
            android:text="@string/id_125"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="left|center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"

            android:src="@drawable/support"
            android:tint="@color/white"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            tools:context=".ui.StatisticsViewer">
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:layout_weight="10"
                card_view:cardBackgroundColor="#FFFFFF"

                android:clipChildren="false"
                android:layoutDirection="ltr"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                card_view:cardCornerRadius="5dp">
                <FrameLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">
                    <com.kyle.admin.others.RingStatisticsView
                        android:id="@+id/id_rsv"
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20sp"
                        android:layoutDirection="ltr"
                        app:rsv_CenterNumber="5000"
                        app:rsv_CenterNumberColor="#11ddff"
                        app:rsv_CenterText="@string/id_31"
                        app:rsv_CenterTextColor="@color/colorPrimaryDark" />
                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:onClick="more"
                    android:src="@drawable/more_o"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/arb_1"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/id_100"
                    android:textSize="14sp" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="20">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:layout_weight="10"
                    card_view:cardBackgroundColor="#FFFFFF"
                    android:clipChildren="false"
                    android:layoutDirection="ltr"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    card_view:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.db.williamchart.view.BarChartView
                            android:id="@+id/barChart"
                            android:layout_width="120dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="30dp"
                            app:chart_axis="x"
                            app:chart_barsColor="#3AB7AD"
                            app:chart_barsRadius="4dp"
                            app:chart_labelsColor="#A5A5A5"
                            app:chart_labelsFont="@font/cairoregular"
                            app:chart_labelsSize="10sp"
                            app:chart_spacing="15dp"
                            app:layout_constraintBottom_toTopOf="@id/horizontalBarChart"
                            app:layout_constraintLeft_toLeftOf="parent" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:layout_weight="10"
                    card_view:cardBackgroundColor="#FFFFFF"
                    android:clipChildren="false"
                    android:layoutDirection="ltr"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    card_view:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:src="@drawable/data">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/arb_1"
                            android:gravity="center"
                            android:id="@+id/title2"
                            android:text="@string/id_58"
                            android:textSize="12sp" />

                        <FrameLayout
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/co" />

                            <TextView
                                android:id="@+id/counter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/a5"
                                android:gravity="center"
                                android:text="12"
                                android:textColor="#7a70b3"
                                android:textSize="37sp" />
                        </FrameLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                card_view:cardBackgroundColor="#FFFFFF"
                android:clipChildren="false"
                android:layoutDirection="ltr"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/arb_1"
                        android:gravity="center"
                        android:text="@string/id_102"
                        android:textSize="12sp" />

                    <com.db.williamchart.view.HorizontalBarChartView
                        android:id="@+id/horizontalBarChart"
                        android:layout_width="match_parent"
                        android:layout_height="148dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:chart_axis="y"
                        app:chart_barsColor="@color/colorPrimary"
                        app:chart_barsRadius="6dp"
                        app:chart_labelsColor="@color/colorPrimaryDark"
                        app:chart_labelsFont="@font/cairoregular"
                        app:chart_labelsSize="15sp"
                        app:chart_spacing="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
